# optimising-attestation-packing-satalia

./: .gitignore  Cargo.toml  README.md
doc/: Makefile  abridged.bib  abridged.tex  approaches.bib  approaches.tex  att.txt  inst.txt  problem.tex  report.aux  report.bbl  report.bib  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
instances/: slot_3741052_instance.json
scripts/: run_mip.sh  run_mip_zstd.sh  run_n_unique_root.sh
src/: lib.rs  main.rs
src/aapp/: instance.rs
src/algorithms/: bron_kerbosh.rs  mod.rs  w_max_coverage.rs
src/approaches/: mip_approach.rs  mod.rs  n_unique_roots.rs
