[package]
name = "sigmaprime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
#hex = { version = "0.4.3", features = ["serde"] }
serde-hex = "0.1.0"
good_lp = "1.3.2"
primitive-types = { version = "0.11.1", features = ["serde"] }
